styles/components/generic_section.css
.generic_section {
  background-color: var(--clr-bg);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 1rem;
}

.generic_section h1 {
  color: var(--clr-h1);
  font-size: var(--size-3xl);
  margin-bottom: -1rem;
}

.generic_section h2 {
  color: var(--clr-accent);
  font-size: var(--size-lg);
}

.generic_section false-h2 {
  margin: 0.25em;
}

.generic_section p,
.generic_section ul,
.generic_section ol {
  max-width: 60ch;
  color: var(--clr-main);
}

.generic_section blockquote {
  margin: 1em 0;
  padding: 0.5em 1em;
  border-left: 4px solid var(--clr-main);
  color: var(--clr-main);
  font-style: italic;
  transition: border-left-color .5s;
}

.generic_section blockquote:hover {
  border-left-color: var(--clr-accent);
}

.generic_section hr {
  border: none;
  height: 4px;
  width: 80%;
  background-color: var(--clr-main);
  margin: 1rem 0;
  transition: background-color .5s;
}

.generic_section hr:hover {
  background-color: var(--clr-accent);
}

.generic_section .btn {
  background-color: var(--clr-accent);
  font-size: var(--size-sm);
  margin: 0 auto;
}

.generic_section a {
  position: relative;
}

.generic_section a:not(.noline)::after {
  content: "";
  position: absolute;
  left: 0;
  bottom: 0;
  width: 0%;
  height: 2px;
  background: currentColor;
  transition: width 0.2s ease;
}

.generic_section a:hover:not(.noline)::after {
  width: 100%;
}

.generic_section .link-div {
  position: relative;
}

.generic_section .link-arrow {
  display: inline-block;
  text-decoration: none;
  position: absolute;
  color: var(--clr-accent);
  height: 1.5rem;
  width: 1.5rem;
  top: .125rem;
  left: 15rem;
  z-index: 1;
  transform: translateX(0px);
  transition: transform 0.2s;
}

.generic_section .link-arrow:hover {
  color: var(--clr-accent2);
  transform: translateX(8px);
}

/* xs */
@media (min-width: 475px) {
  .generic_section {
    gap: 1.5rem;
  }

  .generic_section h1 {
    font-size: var(--size-4xl);
  }

  .generic_section h2 {
    font-size: var(--size-xl);
  }

  .generic_section .link-arrow {
    top: .15rem;
    left: 20rem;
  }

  .generic_section .btn {
    font-size: var(--size-md);
  }
}

/* sm */
@media (min-width: 640px) {
  .generic_section h1.reg-h1 {
    display: none;
  }
}

/* md */
/* @media (min-width: 768px) {} */

/* lg */
@media (min-width: 1024px) {
  .generic_section h1 {
    font-size: var(--size-6xl);
  }

  .generic_section h2 {
    font-size: var(--size-2xl);
  }

  .generic_section .link-arrow {
    top: .3rem;
  }

  .generic_section .btn {
    font-size: var(--size-xl);
  }
}

/* xl */
@media (min-width: 1280px) {
  .generic_section {
    gap: 2rem;
  }

  .generic_section h1 {
    font-size: var(--size-7xl);
  }

  .generic_section h2 {
    font-size: var(--size-4xl);
  }

  .generic_section .link-arrow {
    width: 2.5rem;
    height: 2.5rem;
    top: .25rem;
    left: 25rem;
  }

  .generic_section .btn {
    font-size: var(--size-2xl);
  }
}

/* 2xl */
/* @media (min-width: 1536px) {} */

